--- a/stylecity.css
+++ b/stylecity.css
@@ -83,7 +83,7 @@ nav a:hover {
 }
 
 .hero.Bangkok {
-    background: url(https://cdn.pixabay.com/photo/2017/03/27/13/25/city-2178705_1280.jpg) no-repeat center center/cover;
+    background: url(https://res.cloudinary.com/dpwoqx0xz/image/upload/v1731833737/iStock-2113145841_vafiss.jpg) no-repeat center center/cover;
     height: 50vh;
     display: flex;
     align-items: center;
